--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@
 
 # base ----------------------------------------
 Cython
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.2
-Pillow
-PyYAML>=5.3.1
-scipy>=1.4.1
-tensorboard>=1.5
-torch>=1.7.0
-torchvision>=0.8.1
-tqdm>=4.41.0
+matplotlib==3.7.1
+numpy==1.24.3
+opencv-python==4.7.0.72
+Pillow==9.5.0
+PyYAML==6.0
+scipy=1.10.1
+tensorboard==2.13.0
+torch==1.12.1
+torchvision==0.13.1
+tqdm==4.65.0
 
 # logging -------------------------------------
 # wandb
