--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ numpy==1.24.3
 opencv-python==4.7.0.72
 Pillow==9.5.0
 PyYAML==6.0
-scipy=1.10.1
+scipy==1.10.1
 tensorboard==2.13.0
 torch==1.12.1
 torchvision==0.13.1
