--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@
 # base ----------------------------------------
 Cython
 matplotlib==3.7.1
-numpy==1.24.3
+numpy==1.23.5
 opencv-python==4.7.0.72
 Pillow==9.5.0
 PyYAML==6.0
 scipy==1.10.1
-tensorboard==2.13.0
+tensorboard==2.11.0
 torch==1.13.1
 torchvision==0.14.1
+torchaudio==0.13.1
+torchdata==0.5.1
+torchtext==0.14.1
 tqdm==4.65.0
 
 # logging -------------------------------------
