--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Pillow==9.5.0
 PyYAML==6.0
 scipy==1.10.1
 tensorboard==2.11.0
+tensorflow==2.11
 torch==1.13.1
 torchvision==0.14.1
 torchaudio==0.13.1
