--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ matplotlib==3.7.1
 numpy==1.23.5
 opencv-python==4.7.0.72
 Pillow==9.5.0
+protobuf==4.21.12
 PyYAML==6.0
 scipy==1.10.1
 tensorboard==2.11.0
